--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,48 @@
 html, body {
-    margin: 0px;
-    padding: 0px;
-    background-color: aquamarine;
+    margin: 0;
+    padding: 0;
+    background: #fafafa;
+}
+
+.dino {
+    width: 60px;
+    height: 60px;
+    background-image: url(../img/dino.png);
+    position: absolute;
+    bottom: 0;
+}
+
+.cactus {
+    width: 60px;
+    height: 60px;
+    background-image: url(../img/cactus.png);
+    position: absolute;
+    bottom: 0;
+}
+
+.game-over {
+    text-align: center;
+    color: #666666;
+    margin: 50px;
+    font-family: arial;
+}
+  
+@keyframes slideright {
+    from {
+        background-position: 70000%;
+    }
+    to {
+        background-position: 0%;
+    }
+}
+
+.background {
+    position: absolute;
+    bottom: 0;
+    background-image: url(../img/background.png);
+    background-repeat: repeat-x;
+    animation: slideright 600s infinite linear;
+    -webkit-animation: slideright 600s infinite linear;
+    width: 100%;
+    height: 200px;
 }
